// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`my test suite works 1`] = `
<canvas
  data-snapshot-image="bc2707e37786514638f6a1f62a896e40787ff5c617db477948db601c06329b48cdb63e7ebc84c2407c7b4820293bca9a4e6d7a4b9cafa1b71e761a87edab646d"
  height="200"
  width="200"
/>
`;

exports[`my test suite works for canvas wrapped by other elements 1`] = `
<div>
  <canvas
  data-snapshot-image="dd883ffbc247e397e4afa916dd2721a057a19394957b42cb084196c5496675e4274722cd17e14d8bef21d90ab469af0995e8b32adaf579f8b39dbf0256ce0253"
  height="200"
  width="200"
/>
</div>
`;
